[package]
name = "rm-regex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5.9", features = ["derive"] }
regex = { version = "1.11.0", features = ["std"] }
